feat: currencies CRUD v0.0.1 - Migration - System Improvment
