# internal/models/currncies.go
@@ -1,20 +1,23 @@
 // internal/models/currency.go
 package models
 
-import "time"
+// CurrencyInfo defines the structure of the `info` field in the Currency model
+type CurrencyInfo struct {
+	EnName   string `json:"en_name"`
+	FaName   string `json:"fa_name"`
+	IfFiat   bool   `json:"if_fiat"`
+	Symbol   string `json:"symbol"`
+	IsToken  bool   `json:"is_token"`
+	Contract string `json:"contract"`
+}
 
-// Currency model for the currencies table
+// Currency defines the structure of the currency model
 type Currency struct {
-	ID     int    `json:"id"`
-	HK     string `json:"hk"`
-	Status string `json:"status"`
-	Info   struct {
-		FaName string `json:"fa_name"`
-		EnName string `json:"en_name"`
-		Symbol string `json:"symbol"`
-		IfFiat bool   `json:"if_fiat"`
-	} `json:"info"`
-	CreatedAt time.Time  `json:"created_at"`
-	UpdatedAt time.Time  `json:"updated_at"`
-	DeletedAt *time.Time `json:"deleted_at,omitempty"`
+	ID        int          `json:"id"`
+	HK        string       `json:"hk"`
+	Status    string       `json:"status"`
+	Info      CurrencyInfo `json:"info"`
+	CreatedAt string       `json:"created_at"`
+	UpdatedAt string       `json:"updated_at"`
+	DeletedAt *string      `json:"deleted_at,omitempty"`
 }
